[package]
name = "jkmp-backend-matchmaking"
version = "0.1.0"
authors = ["Skipcast"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["time", "codec"] }
futures = "0.3.16"
anyhow = "1.0.43"
bincode = "1.3.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
bytes = "1.1.0"
reqwest = { version = "0.11.4", features = ["json"] }
hex = "0.4.3"
structopt = "0.3.23"