[package]
name = "jkmp-backend-matchmaking"
version = "0.1.0"
authors = ["Skipcast"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.10", features = ["full"] }
tokio-util = { version = "0.6", features = ["time", "codec"] }
futures = "0.3"
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
hex = "0.4"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
