[package]
name = "server_tests"
version = "0.1.0"
authors = ["Skipcast", "amPerl"]
edition = "2021"

[dependencies]
jkmp = { path = "../jkmp" }
server = { path = "../server" }
tokio = { version = "1.10", features = ["full"] }
tokio-util = { version = "0.6", features = ["time", "codec"] }
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
hex = "0.4"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-cron-scheduler = "0.3.1"
async-trait = "0.1.52"